--- a/index.html
+++ b/index.html
@@ -104,14 +104,15 @@ the listed energies are:</p>
 
 <slide class="" id="slide-4" style="background:;">
   <hgroup>
-    <h2>Shiny App</h2>
+    <h2>Shiny App and Github</h2>
   </hgroup>
   <article data-timings="">
     <ul>
 <li><p>Nthe shiny app wrote for this project can be accessed via the following link</p></li>
+<li><p><a href="https://dataspf.shinyapps.io/dev-data-products-master/">https://dataspf.shinyapps.io/dev-data-products-master/</a></p></li>
+<li><p>github containing other files:</p></li>
+<li><p><a href="https://github.com/Pooyafarah/DDP_CourseProject">https://github.com/Pooyafarah/DDP_CourseProject</a></p></li>
 </ul>
-
-<h2>- <a href="https://dataspf.shinyapps.io/dev-data-products-master/">https://dataspf.shinyapps.io/dev-data-products-master/</a></h2>
 
   </article>
   <!-- Presenter Notes -->
@@ -141,7 +142,7 @@ the listed energies are:</p>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=4 title='Shiny App'>
+        data-slide=4 title='Shiny App and Github'>
          4
       </a>
     </li>
